@@ -1,3 +1,7 @@
+16 August 2010: Wouter
+	- Fix acx_nlnetlabs.m4 configure output for autoconf-2.66 AS_TR_CPP
+	  changes, uses m4_bpatsubst now.
+
 13 August 2010: Wouter
 	- More pleasant remote control command parsing.
 	- documentation added for return values reported by doxygen 1.7.1.
